# host-identity

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  .shellspec  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  about.hbs  about.toml  context7.json  deny.toml  minisign.pub
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
crates/host-identity/: CHANGELOG.md  Cargo.toml  README.md
crates/host-identity-cli/: Cargo.toml  README.md
crates/host-identity-cli/src/: lib.rs  main.rs  transport.rs
crates/host-identity-cli/tests/: app_specific.rs  host_identity_file_env.rs
crates/host-identity/examples/: app_specific.rs  audit.rs  basic.rs  config_driven.rs
crates/host-identity/src/: error.rs  hostid.rs  ids.rs  lib.rs  resolver.rs  source.rs  transport.rs  wrap.rs
crates/host-identity/src/sources/: app_specific.rs  aws.rs  azure.rs  bsd.rs  bsd_stubs.rs  cloud.rs  container.rs  digitalocean.rs  freebsd.rs  freebsd_stubs.rs  gcp.rs  generic.rs  hetzner.rs  illumos.rs  illumos_stubs.rs  kubernetes.rs  linux.rs  linux_stubs.rs  lxc.rs  macos.rs  macos_stubs.rs  mod.rs  oci.rs  openstack.rs  stub_macros.rs  util.rs  windows.rs  windows_stubs.rs
crates/host-identity/tests/: integration.rs  lxc_source.rs
docs/: adding-an-identity-source.md  algorithm.md  cutting-a-release.md  developer-guide.md  install.md  lessons-learned.md  packaging.md
man/: host-identity-audit.1  host-identity-resolve.1  host-identity-sources.1  host-identity.1  hostid-audit.1  hostid-resolve.1  hostid-sources.1  hostid.1
packaging/: README.md
packaging/alpine/: APKBUILD.in
packaging/freebsd/: +MANIFEST.in
packaging/freebsd/port/: Makefile  pkg-descr
packaging/homebrew/: host-identity.rb.tmpl  hostid.rb.tmpl
packaging/scoop/: host-identity.json.in  hostid.json.in
spec/: app_specific_spec.sh  audit_spec.sh  env_override_spec.sh  format_spec.sh  help_and_version_spec.sh  resolve_spec.sh  sources_spec.sh  spec_helper.sh
utils/: aggregate_rust_metrics.py  code-metrics.sh
xtask/: Cargo.toml
xtask/src/: main.rs
