[workspace]
resolver = "3"
members = ["crates/host-identity", "crates/host-identity-cli", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dekobon/host-identity"

[workspace.dependencies]
host-identity = { path = "crates/host-identity", version = "0.1.0", default-features = false }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
