[workspace]
resolver = "3"
members = ["crates/host-identity", "crates/host-identity-cli", "xtask"]

[workspace.package]
version = "1.0.0-rc1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dekobon/host-identity"

[workspace.dependencies]
host-identity = { path = "crates/host-identity", version = "1.0.0-rc1", default-features = false }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"

# Keep line tables in release builds so dsymutil/objcopy can produce
# meaningful backtraces from a released `host-identity` binary. Release CI
# splits these into separate debug-symbol artefacts and strips the
# primary binary before shipping; local `cargo install` users get a
# slightly larger binary with line-level panic backtraces.
[profile.release]
debug = "line-tables-only"
