[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
# `string` enables `impl From<String> for clap::builder::Str` so we can
# feed freshly-formatted subcommand names (e.g. `host-identity-resolve`)
# to `Command::name` without a `Box::leak` to forge a `'static` string.
clap = { version = "4", features = ["derive", "string"] }
clap_mangen = "0.2"
host-identity-cli = { version = "1.1", path = "../crates/host-identity-cli", default-features = false, features = ["container", "network"] }

[lints]
workspace = true
